2011-06-16 In Cité Solution  <technique@in-cite.net>

	* initial code generated with kickstarter